# Student-Feedback-Flask-DEVops-Render

./: Dockerfile  Jenkinsfile  README.md
ansible/: deploy.yml  inventory
app/: app.py  database.py
app/templates/: feedback.html
mnt/user-data/outputs/final-project/feedback-pkg/: MANIFEST.in  README.md  example_usage.py  pyproject.toml
mnt/user-data/outputs/final-project/feedback-pkg/feedback_system/: __init__.py  cli.py  config.py  database.py  routes.py
mnt/user-data/outputs/final-project/feedback-pkg/feedback_system/static/: style.css
mnt/user-data/outputs/final-project/feedback-pkg/feedback_system/templates/: feedback.html
templates/: edit.html  index.html
